--- a/index.html
+++ b/index.html
@@ -54,28 +54,28 @@
             <label class="form-check-label" for="bbqbeef">Barbecue Beef</label>
           </div>
           <div class="form-check">
-            <input class="form-check-input" type="radio" name="pizza" id="marinara" >
-            <label class="form-check-label" for="marinara">Marinara</label>
+            <input class="form-check-input" type="radio" name="pizza" id="hawaiian" >
+            <label class="form-check-label" for="hawaiian">Hawaiian</label>
           </div>
           <div class="form-check">
-            <input class="form-check-input" type="radio" name="pizza" id="marinara" >
-            <label class="form-check-label" for="marinara">Marinara</label>
+            <input class="form-check-input" type="radio" name="pizza" id="sweet-chilli-chicken" >
+            <label class="form-check-label" for="sweet-chilli-chicken">Sweet Chilli Chicken</label>
           </div>
           <div class="form-check">
-            <input class="form-check-input" type="radio" name="pizza" id="marinara" >
-            <label class="form-check-label" for="marinara">Marinara</label>
+            <input class="form-check-input" type="radio" name="pizza" id="original-veggie" >
+            <label class="form-check-label" for="original-veggie">Original Veggie</label>
           </div>
           <div class="form-check">
-            <input class="form-check-input" type="radio" name="pizza" id="marinara" >
-            <label class="form-check-label" for="marinara">Marinara</label>
+            <input class="form-check-input" type="radio" name="pizza" id="chicken-tikka" >
+            <label class="form-check-label" for="chicken-tikka">Chicken Tikka</label>
           </div>
           <div class="form-check">
-            <input class="form-check-input" type="radio" name="pizza" id="marinara" >
-            <label class="form-check-label" for="marinara">Marinara</label>
+            <input class="form-check-input" type="radio" name="pizza" id="meat-fest" >
+            <label class="form-check-label" for="meat-fest">Meat fest</label>
           </div>
           <div class="form-check">
-            <input class="form-check-input" type="radio" name="pizza" id="marinara" >
-            <label class="form-check-label" for="marinara">Marinara</label>
+            <input class="form-check-input" type="radio" name="pizza" id="pork-rib" >
+            <label class="form-check-label" for="pork-rib">Pork Rib</label>
           </div>
           <br>
           <p>Select type of crust</p>
