--- a/index.html
+++ b/index.html
@@ -38,43 +38,43 @@
 
           <p>Select type of pizza</p>
           <div class="form-check">
-            <input class="form-check-input" type="radio" name="pizza" id="margherita" >
+            <input class="form-check-input" type="radio" name="pizza" id="margherita" value="margherita" >
             <label class="form-check-label" for="margherita">Margherita</label>
           </div>
           <div class="form-check">
-            <input class="form-check-input" type="radio" name="pizza" id="marinara" >
+            <input class="form-check-input" type="radio" name="pizza" id="marinara"  value="marinara" >
             <label class="form-check-label" for="marinara">Marinara</label>
           </div>
           <div class="form-check">
-            <input class="form-check-input" type="radio" name="pizza" id="bbqchicken" >
+            <input class="form-check-input" type="radio" name="pizza" id="bbqchicken" value="bbqchicken" >
             <label class="form-check-label" for="bbqchicken">Barbecue Chicken</label>
           </div>
           <div class="form-check">
-            <input class="form-check-input" type="radio" name="pizza" id="bbqbeef" >
+            <input class="form-check-input" type="radio" name="pizza" id="bbqbeef" value="bbqbeef" >
             <label class="form-check-label" for="bbqbeef">Barbecue Beef</label>
           </div>
           <div class="form-check">
-            <input class="form-check-input" type="radio" name="pizza" id="hawaiian" >
+            <input class="form-check-input" type="radio" name="pizza" id="hawaiian" value="hawaiian"  >
             <label class="form-check-label" for="hawaiian">Hawaiian</label>
           </div>
           <div class="form-check">
-            <input class="form-check-input" type="radio" name="pizza" id="sweet-chilli-chicken" >
+            <input class="form-check-input" type="radio" name="pizza" id="sweet-chilli-chicken" value="sweet-chilli-chicken"  >
             <label class="form-check-label" for="sweet-chilli-chicken">Sweet Chilli Chicken</label>
           </div>
           <div class="form-check">
-            <input class="form-check-input" type="radio" name="pizza" id="original-veggie" >
+            <input class="form-check-input" type="radio" name="pizza" id="original-veggie" value="original-veggie"  >
             <label class="form-check-label" for="original-veggie">Original Veggie</label>
           </div>
           <div class="form-check">
-            <input class="form-check-input" type="radio" name="pizza" id="chicken-tikka" >
+            <input class="form-check-input" type="radio" name="pizza" id="chicken-tikka" value="chicken-tikka" >
             <label class="form-check-label" for="chicken-tikka">Chicken Tikka</label>
           </div>
           <div class="form-check">
-            <input class="form-check-input" type="radio" name="pizza" id="meat-fest" >
+            <input class="form-check-input" type="radio" name="pizza" id="meat-fest" value="meat-fest" >
             <label class="form-check-label" for="meat-fest">Meat fest</label>
           </div>
           <div class="form-check">
-            <input class="form-check-input" type="radio" name="pizza" id="pork-rib" >
+            <input class="form-check-input" type="radio" name="pizza" id="pork-rib" value="pork-rib" >
             <label class="form-check-label" for="pork-rib">Pork Rib</label>
           </div>
           <br>
