add changes to add another pizza function

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
           <label for="name">Enter your name:</label>
           <input type="text" class="form-control" id="name">
         </div>
+        <div id="new-order">
         <p>Select a size:</p>
         <div class="row">
           <div class="col-md-4">
@@ -103,6 +104,7 @@
             <input class="form-check-input" type="checkbox" name="toppings" id="onions" >
             <label class="form-check-label" for="onions">Onions</label>
           </div>
+        </div>
 
           <br>
           <span class="btn btn-outline-info" id="add-another-pizza">Add another Pizza</span>
@@ -114,6 +116,7 @@
             <p>Pizza crust: <span class="pizza-crust"></span></p>
             <p>Total cost :<span class="pizza-total"></span></p>
           </div>
+
 
       </form>
     </div>
