--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Dosis|Permanent+Marker&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css" type="text/css">
     <script src="js/jquery-3.4.1.js"></script>
     <script src="js/scripts.js"></script>
@@ -9,10 +10,12 @@
   </head>
   <body>
     <div class="container">
+      <div id="header">
       <h1>EATALIAN PIZZA</h1>
-      <p>Tag line</p>
-      <p>Make your order</p>
+      <p>Tasty and hot pizza just for you</p>
+    </div>
       <form id="order">
+        <p>Make your order</p>
         <div class="form-group">
           <label for="name">Enter your name:</label>
           <input type="text" class="form-control" id="name">
