add changes to script file

--- a/index.html
+++ b/index.html
@@ -26,17 +26,17 @@
           <div class="col-md-4">
             <div class="form-check">
             <input class="form-check-input" type="radio" name="size" id="small" value="small" >
-            <label class="form-check-label" for="small">Small</label>
+            <label class="form-check-label" for="small">Small: KSH500</label>
           </div></div>
           <div class="col-md-4">
             <div class="form-check">
             <input class="form-check-input" type="radio" name="size" id="medium" value="medium" >
-            <label class="form-check-label" for="medium">Medium</label>
+            <label class="form-check-label" for="medium">Medium: KSH750</label>
           </div></div>
           <div class="col-md-4">
             <div class="form-check">
             <input class="form-check-input" type="radio" name="size" id="large" value="large">
-            <label class="form-check-label" for="large">Large</label>
+            <label class="form-check-label" for="large">Large: KSH1000</label>
           </div></div></div>
           <br><br>
 
@@ -92,19 +92,19 @@
           <br>
           <p>Select your choice of extra toppings</p>
           <div class="form-check">
-            <input class="form-check-input" type="checkbox" name="toppings" id="bacon" >
+            <input class="form-check-input" type="checkbox" name="toppings" id="bacon" value="bacon" >
             <label class="form-check-label" for="bacon">Bacon</label>
           </div>
           <div class="form-check">
-            <input class="form-check-input" type="checkbox" name="toppings" id="peporoni" >
+            <input class="form-check-input" type="checkbox" name="toppings" id="peporoni" value="peporoni" >
             <label class="form-check-label" for="peporoni">Peporoni</label>
           </div>
           <div class="form-check">
-            <input class="form-check-input" type="checkbox" name="toppings" id="cheese" >
+            <input class="form-check-input" type="checkbox" name="toppings" id="cheese" value="cheese" >
             <label class="form-check-label" for="cheese">Cheese</label>
           </div>
           <div class="form-check">
-            <input class="form-check-input" type="checkbox" name="toppings" id="onions" >
+            <input class="form-check-input" type="checkbox" name="toppings" id="onions" value="onions" >
             <label class="form-check-label" for="onions">Onions</label>
           </div>
         </div>
@@ -131,7 +131,7 @@
               <label for="name">For delivery, enter your location:</label>
               <input type="text" class="form-control" id="location">
             </div>
-            <button type="submit" id="checkoutbtn" class="btn btn-outline-success">Confirm Order</button>
+            <button type="submit" id="checkout-btn" class="btn btn-outline-success">Confirm Order</button>
           </div>
           <div id="checkout">
             <p class= "total"></p>
