make changes to js file to accept one order

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
           </div>
         </div>
         <br>
-          <span class="btn btn-outline-info" id="add-another-pizza">Add another Pizza</span>
+          <!--<span class="btn btn-outline-info" id="add-another-pizza">Add another Pizza</span>-->
           <button type="submit" id="proceed-to-checkout" class="btn btn-outline-success">Proceed to Checkout</button>
 
           <br><br>
