--- a/index.html
+++ b/index.html
@@ -96,15 +96,15 @@
           </div>
           <div class="form-check">
             <input class="form-check-input" type="radio" name="crust" id="thick" value="thick" >
-            <label class="form-check-label" for="thick">Thick-Crust</label>
+            <label class="form-check-label" for="thick">Thick-Crust (extra KSH100)</label>
           </div>
           <div class="form-check">
             <input class="form-check-input" type="radio" name="crust" id="glutten" value="glutten" >
-            <label class="form-check-label" for="glutten">Glutten-Free</label>
+            <label class="form-check-label" for="glutten">Glutten-Free (extra KSH200)</label>
           </div>
           <div class="form-check">
             <input class="form-check-input" type="radio" name="crust" id="cheese" value="cheese" >
-            <label class="form-check-label" for="cheese">Cheese-Stuffing</label>
+            <label class="form-check-label" for="cheese">Cheese-Stuffing (extra KSH150)</label>
           </div>
           <br>
           <p>Select your choice of extra toppings</p>
@@ -142,8 +142,9 @@
             </div>
             <div class="form-check">
               <input class="form-check-input" type="radio" name="delivery" id="delivery" value="delivery" >
-              <label class="form-check-label" for="delivery">Delivery</label>
+              <label class="form-check-label" for="delivery">Delivery (At an extra cost of KSH 200)</label>
             </div>
+            <br>
             <div class="form-group">
               <label for="name">For delivery, enter your location:</label>
               <input type="text" class="form-control" id="location">
